# mFrame

./: .clang-format  .gitignore  BUILD_ANDROID.md  GCanvas.podspec  GCanvas架构分析报告.md  README.MD  WmCanvas.podspec  build.gradle  build_android.bat  build_android.ps1  convert-encoding.ps1  convert_encoding.py  encoding-conversion-report.txt  format-core-files.ps1  gradle.properties  publish.gradle  publish_local.gradle  settings.gradle
.github/: copilot-instructions.md
android/demo/: README.md  build.gradle  proguard-rules.pro
android/demo/src/main/: AndroidManifest.xml
android/demo/src/main/assets/: CODE_CLEANUP_REPORT.md  INTEGRATION_SUMMARY.md  README.md  index.html  package.json  vite.config.js  wmcanvas-wrapper.js
android/wmcanvas_library/: AndroidManifest.xml  README.MD  build.gradle  proguard-rules.txt
core/: AndroidManifest.xml  CMakeLists.txt
core/android/: WmCanvasJNI.cpp  WmCanvasJNI.h  WmCanvasLinkNative.cpp  WmCanvasLinkNative.h  common.h  elf_sym_reader.cpp  elf_sym_reader.h  external.h
core/android/3d/: Wm3d_jni.cpp  Wm3d_jni.h  WmManager.cpp  WmManager.h  Wmmanager.cpp  Wmmanager.h
core/android/3d/jsc/: weexjsc.h
core/android/3d/util/: auto_ptr.h  i_delete.h  ref_count.h
core/android/3d/view/: WmRenderer.cpp  WmRenderer.h  WmcanvasWeexAndroid.cpp  WmcanvasWeexAndroid.h  Wmrenderer.cpp  Wmrenderer.h
core/android/freetype-prebuilt/include/freetype/: freetype.h  ftoutln.h  ftstroke.h  tttables.h
core/android/freetype-prebuilt/include/freetype/config/: ftconfig.h  ftoption.h
core/android/freetype-prebuilt/include/freetype/internal/: autohint.h  ftcalc.h  ftdriver.h  ftobjs.h  ftpic.h  ftrfork.h  ftserv.h  psaux.h  pshints.h  sfnt.h  t1types.h  tttypes.h
core/android/manager/: WmCanvasManagerAndroid.cpp
core/android/memory/: AutoPtr.h  IDelete.h  RefCount.h
core/android/png/: IPngCoder.h  LodePngCoder.cpp  LodePngCoder.h  PngLoader.cpp  PngLoader.h
core/src/: WmCanvas.cpp  WmCanvas.hpp  WmCanvasManager.cpp  WmCanvasManager.h  WmCanvasWeex.cpp  WmCanvasWeex.hpp  export.h
core/src/commandbuffer/: WmCommandBuffer.cpp  WmCommandBuffer.hpp  WmCommandDecoder.cpp  WmCommandDecoder.hpp
core/src/platform/Android/: WmCanvas2DContextAndroid.cpp  WmCanvas2DContextAndroid.h  WmCanvas2DContextImpl.cpp  WmCanvasAndroid.cpp  WmCanvasAndroid.h  WmFont.cpp  WmFont.h  WmFontCache.cpp  WmFontCache.h  WmFontFamily.cpp  WmFontFamily.h  WmFontManagerAndroid.cpp  WmFontManagerAndroid.h  WmFontManagerImpl.cpp  WmFrameBufferObjectImpl.cpp  WmFreeTypeWrap.cpp  WmFreeTypeWrap.h  WmPreCompiledShaders.cpp  WmPreCompiledShaders.h  WmSystemFontInformation.cpp  WmSystemFontInformation.h
core/src/platform/Android/egl/: WmEGLContext.cpp  WmEGLContext.h  WmEGLPbufferContext.cpp  WmEGLWindowContext.cpp  WmSharedEGLContext.cpp
core/src/platform/Linux/: FontTool.hpp  PortableMap.hpp  WmFontCacheLinux.cpp  WmFontCacheLinux.hpp  WmFontLinux.cpp  WmFontManagerLinux.cpp  WmFontManagerLinux.hpp  WmSystemFontInformation.cpp  argh.h  fonttool.cpp  utils.hpp
core/src/platform/iOS/: GCVFont.mm  GFontManagerIOS.mm  WmCVFont.h  WmCVFont.mm  WmFontManagerIOS.h  WmFontManagerIOS.mm
core/src/support/: CharacterSet.cpp  CharacterSet.h  DynArray.h  Encode.cpp  Encode.h  FileUtils.cpp  FileUtils.h  Lesser.h  Log.cpp  Log.h  Util.cpp  Util.h  Value.cpp  Value.h
core/src/webgl/: WmCommandDecoderWebGL.cpp  WmCommandDecoderWebGL.hpp  WmWebGLRenderContext.cpp  WmWebGLRenderContext.hpp  WmWebGLRenderContextInner.cpp  WmWebGLRenderContextInner.hpp
core/src/wmcanvas/: WmCanvas2dContext.cpp  WmCanvas2dContext.h  WmCanvasState.cpp  WmCanvasState.h  WmContext2dType.h  WmConvert.cpp  WmConvert.h  WmFillStyle.h  WmFontManager.cpp  WmFontManager.h  WmFontStyle.cpp  WmFontStyle.h  WmGlyphCache.cpp  WmGlyphCache.h  WmPath.cpp  WmPath.h  WmPath2D.cpp  WmPath2D.h  WmPathStroker.cpp  WmPathStroker.h  WmPoint.h  WmStrSeparator.cpp  WmStrSeparator.h  WmTextDefine.h  WmTransform.h  WmTreemap.cpp  WmTreemap.h  WmWebglContext.cpp  WmWebglContext.h
core/src/wmcanvas/GL/: WmFrameBufferObject.cpp  WmFrameBufferObject.h  WmGL.h  WmGLRender.cpp  WmGLRender.hpp  WmGLUtil.cpp  WmGLUtil.h  WmLUtil.cpp  WmLUtil.h  WmShader.cpp  WmShader.h  WmShaderManager.cpp  WmShaderManager.h  WmTexture.cpp  WmTexture.h
core/src/wmcanvas/GL/shaders/: blur.glsl  radiation.glsl  texture.glsl
core/test/linux/: CMakeLists.txt  WmBenchMark.cpp  WmBenchMark.h  mainOffScreen.cpp  mainOnScreen.cpp  readme.md
core/test/linux/freetype2/: ft2build.h
core/test/linux/freetype2/freetype/: freetype.h  ftadvanc.h  ftautoh.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftcid.h  fterrdef.h  fterrors.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftpcfdrv.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttrigon.h  ftttdrv.h  fttypes.h  ftwinfnt.h  (+5 more)
core/test/linux/freetype2/freetype/config/: ftconfig.h  ftheader.h  ftmodule.h  ftoption.h  ftstdlib.h
core/test/linux/util/: app.js  lodepng.h  testCases.cc
docs/: API_Coverage_Report.md  APIs.md  About.md  An_Introduction_to_GCanvas.md  BUILD_ANDROID.md  Brief.md  Changelog.md  Contributing.md  Core_Formatting_Complete_Report.md  Core_Formatting_Report.md  Encoding_Conversion_Report.md  Guide_Android_Setup_Weex.md  Guide_Custom_Bridge.md  Guide_Custom_GCanvas_Bridge.md  Guide_Developer.md  Guide_JS_Use.md  Guide_Setup_ReactNative.md  Guide_Setup_Weex.md  Guide_iOS_Setup_Weex.md  Task79_Migration_Analysis.md
ios/BridgeModule/: GCanvasModule.h  GCanvasModule.m  GCanvasPlugin.h  GCanvasPlugin.mm
ios/GCanvas/GCanvas.xcodeproj/: project.pbxproj
ios/GCanvas/GCanvas.xcodeproj/xcshareddata/xcschemes/: GCanvas.xcscheme
node/: CMakeLists.txt  README.MD  package.json
node/binding/: CanvasRenderingContext2D.cc
node/renderContext/: GRenderContext.cc  GRenderContext.h
node/script/: install.sh
tools/build_website/: index.yaml
tools/build_website/template/: community.pug  folk.pug  header.pug  index.pug
(+71 files in other folders)
